[package]
name = "nrtmv4-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.1", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1.0"
sha256 = "1.5.0"
bytes = "1.6"
flate2 = "1.0.28"
ed25519-dalek = "2"
base64 = "0"
