[package]
name = "nrtm4-validator"
version = "0.1.0"
edition = "2021"
authors = ["Sasha Romijn <github@mxsasha.eu>"]
license = "MIT"
description = "A validator for draft-ietf-grow-nrtm-v4"
readme = "README.md"
homepage = "https://github.com/mxsasha/nrtm4-validator/"
repository = "https://github.com/mxsasha/nrtm4-validator/"
keywords = ["cli", "nrtmv4", "rpsl"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.1", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
anyhow = "1.0"
sha256 = "1.5.0"
bytes = "1.6"
flate2 = "1.0.28"
ed25519-dalek = "2.1"
base64 = "0"
regex = "1.10"
once_cell = "1.19"
josekit = "0.10.1"
pem = "3.0.4"
